CONJ-1238: remove List.of() as missing from JDK8